--- a/_posts/book/kubernetes-basic/2019-03-16-06.md
+++ b/_posts/book/kubernetes-basic/2019-03-16-06.md
@@ -14,7 +14,7 @@ sidebar:
 
 * * *
 
-# 06장 스토리지와 스테이트풀 애플리케이션 실행퍼시스턴트 스토리지
+## 06장 스토리지와 스테이트풀 애플리케이션 실행퍼시스턴트 스토리지
 
 * 볼륨은 컨테이너 바깥에 존재
 * 중요한 데이터를 저장할 수 있도록 함
