--- a/_posts/book/effective-java-3e/2019-07-07-item-18.md
+++ b/_posts/book/effective-java-3e/2019-07-07-item-18.md
@@ -16,12 +16,12 @@ sidebar:
 
 ## 아이템 18 - 상속보다는 컴포지션을 사용하라
 
-### 래퍼 클래스 - 상속 대신 컴포지션을 사용했다.
+### 래퍼 클래스 - 상속 대신 컴포지션을 사용했다
 
 ```java
 public class InstrumentedSet<E> extends ForwardingSet<E> {
   private int addCount = 0;
- 
+
   public InstrumentedSet(Set<E> s) {
     super(s);
   }
