--- a/_posts/book/kotlin-in-action/2019-11-17-01.md
+++ b/_posts/book/kotlin-in-action/2019-11-17-01.md
@@ -3,7 +3,7 @@ layout: archive
 title: "[Kotlin in Action] 01장 - 코틀린이란 무엇이며, 왜 필요한가?"
 date: 2019-11-17
 excerpt: ""
-tags: [book, kotlin-in-action, 01장 - 코틀린이란 무엇이며, 왜 필요한가?]
+tags: [book, kotlin-in-action, 01장 - 코틀린이란 무엇이며 왜 필요한가]
 category: [book/kotlin-in-action]
 #read_time: true
 #share: true
